--- a/Devices.html
+++ b/Devices.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- العنوان (واحد بس) -->
-  <title>سكن أفندي | شقق للإيجار والبيع</title>
+  <title>سكن أفندي | الاحهزه الكهربائية  للبيع</title>
 
   <!-- وصف الموقع لمحركات البحث -->
   <meta name="description" content="سكن أفندي بيوفرلك شقق للإيجار والبيع، أراضي، محلات، مواد غذائية، مستلزمات طبية، موبايلات، أجهزة كهربائية وملابس.">
@@ -82,6 +82,48 @@
   </div>
 </div>
 
+<!-- زر الرجوع للأعلى -->
+<button onclick="scrollToTop()" id="backToTop" title="الرجوع للأعلى">↑</button>
+
+<style>
+/* شكل الزر */
+#backToTop {
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  z-index: 99;
+  background-color: #2563eb;
+  color: white;
+  border: none;
+  padding: 12px 16px;
+  border-radius: 50%;
+  font-size: 20px;
+  cursor: pointer;
+  display: none; /* مخفي في البداية */
+  transition: all 0.3s ease;
+  box-shadow: 0px 4px 8px rgba(0,0,0,0.2);
+}
+#backToTop:hover {
+  background-color: #1e40af;
+}
+</style>
+
+<script>
+// إظهار/إخفاء الزر عند النزول
+window.onscroll = function() {
+  let btn = document.getElementById("backToTop");
+  if (document.body.scrollTop > 200 || document.documentElement.scrollTop > 200) {
+    btn.style.display = "block";
+  } else {
+    btn.style.display = "none";
+  }
+};
+
+// عند الضغط يرجع للأعلى بسلاسة
+function scrollToTop() {
+  window.scrollTo({top: 0, behavior: 'smooth'});
+}
+</script>
 
 
 
