--- a/index.html
+++ b/index.html
@@ -67,6 +67,50 @@
   </div>
 </header>
 
+<!-- زر الرجوع للأعلى -->
+<button onclick="scrollToTop()" id="backToTop" title="الرجوع للأعلى">↑</button>
+
+<style>
+/* شكل الزر */
+#backToTop {
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  z-index: 99;
+  background-color: #2563eb;
+  color: white;
+  border: none;
+  padding: 12px 16px;
+  border-radius: 50%;
+  font-size: 20px;
+  cursor: pointer;
+  display: none; /* مخفي في البداية */
+  transition: all 0.3s ease;
+  box-shadow: 0px 4px 8px rgba(0,0,0,0.2);
+}
+#backToTop:hover {
+  background-color: #1e40af;
+}
+</style>
+
+<script>
+// إظهار/إخفاء الزر عند النزول
+window.onscroll = function() {
+  let btn = document.getElementById("backToTop");
+  if (document.body.scrollTop > 200 || document.documentElement.scrollTop > 200) {
+    btn.style.display = "block";
+  } else {
+    btn.style.display = "none";
+  }
+};
+
+// عند الضغط يرجع للأعلى بسلاسة
+function scrollToTop() {
+  window.scrollTo({top: 0, behavior: 'smooth'});
+}
+</script>
+
+
 <!-- Hero -->
 <section class="hero">
   <div class="container hero-grid">
