--- a/apartments.html
+++ b/apartments.html
@@ -443,6 +443,40 @@ function scrollToTop() {
   </div>
 </div>
 
+<!-- 🔹 كارت شقة -->
+<div class="card" 
+     data-title="شقه للايجار ديروط نص مفروش" 
+     data-meta="الموقع: ديروط - [ ابو جبل  ]   "  
+     data-price="3,000 جنيه" 
+     data-status="متاحة">
+
+  <!-- 🔹 صور الشقة (سلايدر) -->
+  <div class="thumb slider">
+    <button class="prev-btn">&#10094;</button>
+
+    <img src="شقق/لقطة شاشة 2025-08-21 221817.png" class="slider-img active" alt="صورة 1">
+    <img src="شقق/لقطة شاشة 2025-08-21 221831.png" class="slider-img" alt="صورة 2">
+
+    <button class="next-btn">&#10095;</button>
+
+    <!-- 🔹 الحالة والسعر -->
+    <div class="status">متاحة</div>
+    <div class="price-tag">3,000 جنيه</div>
+  </div>
+
+  <!-- 🔹 تفاصيل الشقة -->
+  <div class="card-body">
+    <h5 class="card-title"> شقه للايجار ف ديروط ابو جبل </h5>
+    <p class="card-text">شقة بموقع متميز بديروط، قريبه  من الخدمات وبسعر ممتاز.</p>
+    <p class="meta">الموقع: ديروط -  </p>
+
+    <!-- 🔹 زر الحجز -->
+    <div class="card-actions">
+      <button class="btn ghost" onclick="bookWhatsApp(this)">حجز عبر واتساب</button>
+    </div>
+  </div>
+</div>
+
 
       
     </div>
