تحديث وصف الميتا SEO

--- a/apartments.html
+++ b/apartments.html
@@ -445,29 +445,28 @@ function scrollToTop() {
 
 <!-- 🔹 كارت شقة -->
 <div class="card" 
-     data-title="شقه للايجار ديروط نص مفروش" 
-     data-meta="الموقع: ديروط - [ ابو جبل  ]   "  
-     data-price="3,000 جنيه" 
+     data-title="بيت تلات ادوار عند رفاعي الطهطاوي 105 متر" 
+     data-meta="الموقع: ديروط - [  ديروط  ]   "  
+     data-price="3,000,000 جنيه" 
      data-status="متاحة">
 
   <!-- 🔹 صور الشقة (سلايدر) -->
   <div class="thumb slider">
     <button class="prev-btn">&#10094;</button>
 
-    <img src="شقق/لقطة شاشة 2025-08-21 221817.png" class="slider-img active" alt="صورة 1">
-    <img src="شقق/لقطة شاشة 2025-08-21 221831.png" class="slider-img" alt="صورة 2">
+    <img src="" class="slider-img active" alt="شقه مانديلا">
 
     <button class="next-btn">&#10095;</button>
 
     <!-- 🔹 الحالة والسعر -->
     <div class="status">متاحة</div>
-    <div class="price-tag">3,000 جنيه</div>
+    <div class="price-tag">3,000,000 جنيه</div>
   </div>
 
   <!-- 🔹 تفاصيل الشقة -->
   <div class="card-body">
-    <h5 class="card-title"> شقه للايجار ف ديروط ابو جبل </h5>
-    <p class="card-text">شقة بموقع متميز بديروط، قريبه  من الخدمات وبسعر ممتاز.</p>
+    <h5 class="card-title"> بيت تلات ادوار عند رفاعي الطهطاوي 105 متر </h5>
+    <p class="card-text">بيت 105 متر  </p>
     <p class="meta">الموقع: ديروط -  </p>
 
     <!-- 🔹 زر الحجز -->
@@ -476,6 +475,109 @@ function scrollToTop() {
     </div>
   </div>
 </div>
+
+
+<!-- 🔹 كارت شقة -->
+<div class="card" 
+     data-title="شقه في برج مانديلا 105 متر دور سادس علوي علي الطوب" 
+     data-meta="الموقع: ديروط - [ ابو جبل  ]   "  
+     data-price="1,700,000 جنيه" 
+     data-status="متاحة">
+
+  <!-- 🔹 صور الشقة (سلايدر) -->
+  <div class="thumb slider">
+    <button class="prev-btn">&#10094;</button>
+
+    <img src="" class="slider-img active" alt="شقه مانديلا">
+
+    <button class="next-btn">&#10095;</button>
+
+    <!-- 🔹 الحالة والسعر -->
+    <div class="status">متاحة</div>
+    <div class="price-tag">1,700,000 جنيه</div>
+  </div>
+
+  <!-- 🔹 تفاصيل الشقة -->
+  <div class="card-body">
+    <h5 class="card-title"> شقه في برج مانديلا 105 متر دور سادس علوي علي الطوب</h5>
+    <p class="card-text">شقه   105 متر دور سادس علوي علي الطوب</p>
+    <p class="meta">الموقع: ديروط -  </p>
+
+    <!-- 🔹 زر الحجز -->
+    <div class="card-actions">
+      <button class="btn ghost" onclick="bookWhatsApp(this)">حجز عبر واتساب</button>
+    </div>
+  </div>
+</div>
+
+
+<!-- 🔹 كارت شقة -->
+<div class="card" 
+     data-title="بيت علي الاسفلت عند رفاعي الطهطاوي 100 متر دورين" 
+     data-meta="الموقع: ديروط - [ رفاعي الطهطاوي]   "  
+     data-price="2,500,000 جنيه" 
+     data-status="متاحة">
+
+  <!-- 🔹 صور الشقة (سلايدر) -->
+  <div class="thumb slider">
+    <button class="prev-btn">&#10094;</button>
+
+    <img src="" class="slider-img active" alt="شقه مانديلا">
+
+    <button class="next-btn">&#10095;</button>
+
+    <!-- 🔹 الحالة والسعر -->
+    <div class="status">متاحة</div>
+    <div class="price-tag">2,500,000 جنيه</div>
+  </div>
+
+  <!-- 🔹 تفاصيل الشقة -->
+  <div class="card-body">
+    <h5 class="card-title">  بيت علي الاسفلت عند رفاعي الطهطاوي 100 متر دورين</h5>
+    <p class="card-text">شقه   105 متر دور سادس علوي علي الطوب</p>
+    <p class="meta">الموقع: ديروط -  </p>
+
+    <!-- 🔹 زر الحجز -->
+    <div class="card-actions">
+      <button class="btn ghost" onclick="bookWhatsApp(this)">حجز عبر واتساب</button>
+    </div>
+  </div>
+</div>
+
+
+<!-- 🔹 كارت شقة -->
+<div class="card" 
+     data-title="منزل للبيع مساحه ٩١متر دورين وتالت واقف عل الصبه عند شارع البدايه قريب من شارع المستقبل"
+     data-meta="الموقع: ديروط - [ رفاعي الطهطاوي]   "  
+     data-price="2,500,000 جنيه" 
+     data-status="متاحة">
+
+  <!-- 🔹 صور الشقة (سلايدر) -->
+  <div class="thumb slider">
+    <button class="prev-btn">&#10094;</button>
+
+    <img src="" class="slider-img active" alt="شقه مانديلا">
+
+    <button class="next-btn">&#10095;</button>
+
+    <!-- 🔹 الحالة والسعر -->
+    <div class="status">متاحة</div>
+    <div class="price-tag">2,500,000 جنيه</div>
+  </div>
+
+  <!-- 🔹 تفاصيل الشقة -->
+  <div class="card-body">
+    <h5 class="card-title"> منزل للبيع مساحه ٩١متر دورين وتالت واقف عل الصبه</h5>
+    <p class="card-text"> منزل للبيع مساحه ٩١متر دورين وتالت وقف عل الصبه عند شارع البدايه قريب من شارع المستقبل</p>
+    <p class="meta">الموقع: ديروط -  </p>
+
+    <!-- 🔹 زر الحجز -->
+    <div class="card-actions">
+      <button class="btn ghost" onclick="bookWhatsApp(this)">حجز عبر واتساب</button>
+    </div>
+  </div>
+</div>
+
 
 
       
