--- a/villas.html
+++ b/villas.html
@@ -330,6 +330,40 @@ function scrollToTop() {
 
 <!-- 🔹 كارت شقة -->
 <div class="card" 
+     data-title="ارض 140 متر جمب مدرسه صم بكم سعر المتر 14 " 
+     data-meta="الموقع: ديروط -   الصم والبكم "  
+     data-price="14,000جنيه" 
+     data-status="متاحة">
+
+  <!-- 🔹 صور الشقة (سلايدر) -->
+  <div class="thumb slider">
+    <button class="prev-btn">&#10094;</button>
+
+    <img src="" class="slider-img active" alt="صورة 1">
+
+    <button class="next-btn">&#10095;</button>
+
+    <!-- 🔹 الحالة والسعر -->
+    <div class="status">متاحة</div>
+    <div class="price-tag">14,000 جنيه</div>
+  </div>
+
+  <!-- 🔹 تفاصيل الشقة -->
+  <div class="card-body">
+    <h5 class="card-title">ارض 140 متر جمب مدرسه صم بكم سعر المتر 14 الف</h5>
+    <p class="card-text">ارض بموقع متميز بديروط، قريبة من الخدمات وبسعر ممتاز.</p>
+    <p class="meta">الموقع: ديروط -  الصم والبكم</p>
+
+    <!-- 🔹 زر الحجز -->
+    <div class="card-actions">
+      <button class="btn ghost" onclick="bookWhatsApp(this)">حجز عبر واتساب</button>
+    </div>
+  </div>
+</div>
+
+
+<!-- 🔹 كارت شقة -->
+<div class="card" 
      data-title="ارض  175 متر جمب الصم والبكم سعر المتر 10 الف " 
      data-meta="الموقع: ديروط -   الصم والبكم "  
      data-price="10,000جنيه" 
@@ -400,7 +434,7 @@ function scrollToTop() {
 <div class="card" 
      data-title="ارض قيراط الاربع شارع جمب الشيخ خالد بتاع الموتسيكلات " 
      data-meta="الموقع: ديروط - الدائري "  
-     data-price="2,650,000 جنيه" 
+     data-price="1,650,000 جنيه" 
      data-status="متاحة">
 
   <!-- 🔹 صور الشقة (سلايدر) -->
@@ -413,12 +447,12 @@ function scrollToTop() {
 
     <!-- 🔹 الحالة والسعر -->
     <div class="status">متاحة</div>
-    <div class="price-tag">2,650,000 جنيه</div>
+    <div class="price-tag">1,650,000 جنيه</div>
   </div>
 
   <!-- 🔹 تفاصيل الشقة -->
   <div class="card-body">
-    <h5 class="card-title">ارض  قيراط علي الداير علي الاسفلت  في الجمب البحري واجهه 8 متر</h5>
+    <h5 class="card-title">قيراط الاربع شارع جمب الشيخ خالد بتاع الموتسيكلات </h5>
     <p class="card-text">ارض بموقع متميز بديروط، قريبة من الخدمات وبسعر ممتاز.</p>
     <p class="meta">الموقع: ديروط -   الدائري</p>
 
@@ -453,6 +487,40 @@ function scrollToTop() {
   <!-- 🔹 تفاصيل الشقة -->
   <div class="card-body">
     <h5 class="card-title">ارض قيراط في شارع جمب الشيخ خالد بتاع الموتسيكلات في نص الشارع</h5>
+    <p class="card-text">ارض بموقع متميز بديروط، قريبة من الخدمات وبسعر ممتاز.</p>
+    <p class="meta">الموقع: ديروط -   الدائري</p>
+
+    <!-- 🔹 زر الحجز -->الدائري
+    <div class="card-actions">
+      <button class="btn ghost" onclick="bookWhatsApp(this)">حجز عبر واتساب</button>
+    </div>
+  </div>
+</div>
+
+
+<!-- 🔹 كارت شقة -->
+<div class="card" 
+     data-title="نص قيراط علي الداير شارع جمب البنزيمه الجديده  في نص الشارع" 
+     data-meta="الموقع: ديروط - الدائري "  
+     data-price="800,000 جنيه" 
+     data-status="متاحة">
+
+  <!-- 🔹 صور الشقة (سلايدر) -->
+  <div class="thumb slider">
+    <button class="prev-btn">&#10094;</button>
+
+    <img src="" class="slider-img active" alt="صورة 1">
+
+    <button class="next-btn">&#10095;</button>
+
+    <!-- 🔹 الحالة والسعر -->
+    <div class="status">متاحة</div>
+    <div class="price-tag">800,000 جنيه</div>
+  </div>
+
+  <!-- 🔹 تفاصيل الشقة -->
+  <div class="card-body">
+    <h5 class="card-title">نص قيراط علي الداير شارع جمب البنزيمه الجديده  في نص الشارع</h5>
     <p class="card-text">ارض بموقع متميز بديروط، قريبة من الخدمات وبسعر ممتاز.</p>
     <p class="meta">الموقع: ديروط -   الدائري</p>
 
