--- a/commercial.html
+++ b/commercial.html
@@ -151,10 +151,42 @@ function scrollToTop() {
 <!-- نفس كروت الشقق -->
 <section class="section">
   <div class="container">
-    <h2>سيتم اضافة محلات للشراء والايجار  قريبا ع مستوى اسيوط </h2>
+    <h2> المحلات المتاحه   </h2>
     <div class="grid">
 
+      
+<!-- 🔹 كارت شقة -->
+<div class="card" 
+     data-title="محل داخل سيتي مول بشارع المحطة في قلب أسيوط" 
+     data-meta="الموقع: اسيوط -   سيتي مول "  
+     data-price="1,500,000 جنيه" 
+     data-status="متاحة">
 
+  <!-- 🔹 صور الشقة (سلايدر) -->
+  <div class="thumb slider">
+    <button class="prev-btn">&#10094;</button>
+
+    <img src="" class="slider-img active" alt="صورة 1">
+
+    <button class="next-btn">&#10095;</button>
+
+    <!-- 🔹 الحالة والسعر -->
+    <div class="status">متاحة</div>
+    <div class="price-tag">1,500,000 جنيه</div>
+  </div>
+
+  <!-- 🔹 تفاصيل الشقة -->
+  <div class="card-body">
+    <h5 class="card-title">محل داخل سيتي مول بشارع المحطة في قلب أسيوط</h5>
+    <p class="card-text">محل بموقع متميز اسيوط قريب من الخدمات وبسعر ممتاز.</p>
+    <p class="meta">الموقع: ديروط -  اسيوط</p>
+
+    <!-- 🔹 زر الحجز -->
+    <div class="card-actions">
+      <button class="btn ghost" onclick="bookWhatsApp(this)">حجز عبر واتساب</button>
+    </div>
+  </div>
+</div>
 
       
 
