تحديث وصف الميتا SEO

--- a/commercial.html
+++ b/commercial.html
@@ -179,7 +179,7 @@ function scrollToTop() {
   <div class="card-body">
     <h5 class="card-title">محل داخل سيتي مول بشارع المحطة في قلب أسيوط</h5>
     <p class="card-text">محل بموقع متميز اسيوط قريب من الخدمات وبسعر ممتاز.</p>
-    <p class="meta">الموقع: ديروط -  اسيوط</p>
+    <p class="meta">الموقع: سيي مول -  اسيوط</p>
 
     <!-- 🔹 زر الحجز -->
     <div class="card-actions">
