--- a/apartments.html
+++ b/apartments.html
@@ -579,6 +579,39 @@ function scrollToTop() {
 </div>
 
 
+<!-- 🔹 كارت شقة -->
+<div class="card" 
+     data-title="بيت غرب مدرسه الزراعه دورين كل دور شقتين قيراطي"
+     data-meta="الموقع: ديروط - [ غرب مدرسة الزراعه]   "  
+     data-price="6,000,000 جنيه" 
+     data-status="متاحة">
+
+  <!-- 🔹 صور الشقة (سلايدر) -->
+  <div class="thumb slider">
+    <button class="prev-btn">&#10094;</button>
+
+    <img src="" class="slider-img active" alt="شقه مانديلا">
+
+    <button class="next-btn">&#10095;</button>
+
+    <!-- 🔹 الحالة والسعر -->
+    <div class="status">متاحة</div>
+    <div class="price-tag">6,000,000 جنيه</div>
+  </div>
+
+  <!-- 🔹 تفاصيل الشقة -->
+  <div class="card-body">
+    <h5 class="card-title"> بيت غرب مدرسه الزراعه دورين كل دور شقتين قيراط</h5>
+    <p class="card-text"> منزل للبيع مساحه قيراط دورين الدور شقتين  عند شارع غرب مدرسة الزراعه </p>
+    <p class="meta">الموقع: ديروط -  </p>
+
+    <!-- 🔹 زر الحجز -->
+    <div class="card-actions">
+      <button class="btn ghost" onclick="bookWhatsApp(this)">حجز عبر واتساب</button>
+    </div>
+  </div>
+</div>
+
 
       
     </div>
