تحديث وصف الميتا SEO

--- a/students.html
+++ b/students.html
@@ -180,6 +180,101 @@ function scrollToTop() {
   </div>
 </div>
 </div>
+
+
+<!-- كارت 1 -->
+      <div class="card" data-title="شقة محمد حسن" data-meta="الموقع:  الوليديه "  data-price="1000/شهري" data-gender="ذكر">
+  <div class="thumb slider">
+    <button class="prev-btn">&#10094;</button>
+<img src="محمد/لقطة شاشة 2025-08-24 013815.png" class="slider-img active" alt="صورة 1">
+              <img src="محمد/لقطة شاشة 2025-08-24 013856.png" class="slider-img" alt="صورة 2">
+              <img src="محمد/لقطة شاشة 2025-08-24 013941.png" class="slider-img" alt="صورة 3">
+    <button class="next-btn">&#10095;</button>
+
+    <div class="status">متاحة</div>
+    <div class="price-tag">1000/جنيه</div>
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">شقه  6 سراير اولاد  الشقة اصلا ٨سراير -  </h5>
+            <p class="card-text">العنوان عزبة السجن دقيقة مشى لكبرى ٢٥ يناير والممشى السياحى وخير زمان  السرير .</p>
+    <p class="meta">الموقع: عزبة السجن</p>
+  <div class="card-actions">
+     <button class="btn ghost" onclick="bookWhatsApp(this)">حجز</button>
+  </div>
+</div>
+</div>
+
+
+
+<!-- كارت 1 -->
+      <div class="card" data-title="شقة محمد حسن" data-meta="الموقع:  الوليديه "  data-price="950/شهري" data-gender="ذكر">
+  <div class="thumb slider">
+    <button class="prev-btn">&#10094;</button>
+<img src="محمد/لقطة شاشة 2025-08-24 020640.png" class="slider-img active" alt="صورة 1">
+              <img src="محمد/لقطة شاشة 2025-08-24 020706.png" class="slider-img" alt="صورة 2">
+              <img src="محمد/لقطة شاشة 2025-08-24 020835.png" class="slider-img" alt="صورة 3">
+              <img src="محمد/لقطة شاشة 2025-08-24 020848.png" class="slider-img" alt="صورة 3">
+    <button class="next-btn">&#10095;</button>
+
+    <div class="status">متاحة</div>
+    <div class="price-tag">950/جنيه</div>
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">ولاد خطوات من ميدان اسماء الله الحسنى بجوار مخبز رجب-  </h5>
+            <p class="card-text"> خطوات من ميدان اسماء الله الحسنى بجوار مخبز رجب.استهلاك 1300طول السنه</p>
+    <p class="meta">الموقع:  اسماء الله الحسنى</p>
+  <div class="card-actions">
+     <button class="btn ghost" onclick="bookWhatsApp(this)">حجز</button>
+  </div>
+</div>
+</div>
+
+
+<!-- كارت 1 -->
+      <div class="card" data-title="شقة محمد حسن" data-meta="الموقع:  الوليديه "  data-price="850/شهري" data-gender="ذكر">
+  <div class="thumb slider">
+    <button class="prev-btn">&#10094;</button>
+<img src="محمد/لقطة شاشة 2025-08-24 020640.png" class="slider-img active" alt="صورة 1">
+              <img src="محمد/لقطة شاشة 2025-08-24 020706.png" class="slider-img" alt="صورة 2">
+              <img src="محمد/لقطة شاشة 2025-08-24 020835.png" class="slider-img" alt="صورة 3">
+              <img src="محمد/لقطة شاشة 2025-08-24 020848.png" class="slider-img" alt="صورة 3">
+    <button class="next-btn">&#10095;</button>
+
+    <div class="status">متاحة</div>
+    <div class="price-tag">850/جنيه</div>
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">ولاد ٨سراير بجوار مستشفى الازهر ميدان أسماء الله الحسنى أمام بوابة طب   </h5>
+            <p class="card-text"> الاستهلاك على الطالب </p>
+    <p class="meta">الموقع:  اسماء الله الحسنى</p>
+  <div class="card-actions">
+     <button class="btn ghost" onclick="bookWhatsApp(this)">حجز</button>
+  </div>
+</div>
+</div>
+
+
+<!-- كارت 1 -->
+      <div class="card" data-title="شقة محمد حسن" data-meta="الموقع:  الوليديه "  data-price="1200/شهري" data-gender="ذكر">
+  <div class="thumb slider">
+    <button class="prev-btn">&#10094;</button>
+<img src="محمد/لقطة شاشة 2025-08-24 031721.png" class="slider-img active" alt="صورة 1">
+              <img src="محمد/لقطة شاشة 2025-08-24 031737.png" class="slider-img" alt="صورة 2">
+    <button class="next-btn">&#10095;</button>
+
+    <div class="status">متاحة</div>
+    <div class="price-tag">1200/جنيه</div>
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">موقع متميز جدا اول عزبة السجن مكيف   </h5>
+            <p class="card-text"> الاستهلاك على الطالب </p>
+    <p class="meta"> الموقع: عزبة السجن</p>
+  <div class="card-actions">
+     <button class="btn ghost" onclick="bookWhatsApp(this)">حجز</button>
+  </div>
+</div>
+</div>
+
       <!-- كارت 2 -->
       <div class="card" data-title="شقة 2" data-meta="الموقع: مصنع سيد " data-price="1250/شهري" data-gender="ذكر">
   <div class="thumb slider">
