تحديث جديد في المشروع

--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
   <meta name="author" content="سكن أفندي">
 
   <!-- Open Graph (الصورة والوصف للسوشيال ميديا + جوجل) -->
-  <meta property="og:title" content="سكن أفندي | شقق للإيجار والبيع">
+  <meta property="og:title" content="سكن أفندي | شقق وبيوت للإيجار والبيع وخدمات الافندي">
   <meta property="og:description" content="سكن أفندي بيوفرلك شقق للبيع والإيجار + أراضي + محلات + مواد غذائية + مستلزمات طبية + موبايلات + أجهزة كهربائية + ملابس.">
-  <meta property="og:image" content="https://username.github.io/project/image/WhatsApp%20Image%202025-07-29%20at%205.16.14%20AM.jpeg">
+  <meta property="og:image" content="image/WhatsApp%20Image%202025-07-29%20at%205.16.14%20AM.jpeg">
   <meta property="og:url" content="https://sakan-afandy.github.io/">
   <meta property="og:type" content="website">
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="سكن أفندي | شقق للإيجار والبيع">
+  <meta name="twitter:title" content="سكن أفندي | شقق وبيوت للإيجار والبيع وخدمات الافندي">
   <meta name="twitter:description" content="سكن أفندي بيوفرلك كل احتياجاتك من شقق، محلات، مواد غذائية، مستلزمات طبية، موبايلات وأجهزة كهربائية.">
-  <meta name="twitter:image" content="https://username.github.io/project/image/WhatsApp%20Image%202025-07-29%20at%205.16.14%20AM.jpeg">
+  <meta name="twitter:image" content="image/WhatsApp%20Image%202025-07-29%20at%205.16.14%20AM.jpeg">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
