--- a/villas.html
+++ b/villas.html
@@ -532,6 +532,39 @@ function scrollToTop() {
 </div>
       
 
+<!-- 🔹 كارت شقة -->
+<div class="card" 
+     data-title="قطعه ارض للبيع مساحه ١١٢متر تني نمره من السفلت شرق المدرسه الفكريه"
+     data-meta="الموقع: ديروط - [المدرسه الفكريه ]   "  
+     data-price="14,000 جنيه" 
+     data-status="متاحة">
+
+  <!-- 🔹 صور الشقة (سلايدر) -->
+  <div class="thumb slider">
+    <button class="prev-btn">&#10094;</button>
+
+    <img src="" class="slider-img active" alt="    ">
+
+    <button class="next-btn">&#10095;</button>
+
+    <!-- 🔹 الحالة والسعر -->
+    <div class="status">متاحة</div>
+    <div class="price-tag">14,000 جنيه المتر</div>
+  </div>
+
+  <!-- 🔹 تفاصيل الشقة -->
+  <div class="card-body">
+    <h5 class="card-title">قطعه ارض للبيع مساحه ١١٢متر تني نمره من السفلت شرق المدرسه الفكريه</h5>
+    <p class="card-text"> قطعه ارض للبيع مساحه ١١٢متر تني نمره من السفلت شرق المدرسه الفكريه</p>
+    <p class="meta">الموقع:   ديروط  - المدرسه الفكريه </p>
+
+    <!-- 🔹 زر الحجز -->
+    <div class="card-actions">
+      <button class="btn ghost" onclick="bookWhatsApp(this)">حجز عبر واتساب</button>
+    </div>
+  </div>
+</div>
+
 
 <script>
 let currentSlide = 0;
