--- a/commercial.html
+++ b/commercial.html
@@ -5,26 +5,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- العنوان (واحد بس) -->
-  <title>سكن أفندي | محلات للايجار  والبيع</title>
+  <title>افندي اسيوط  | محلات للايجار  والبيع</title>
 
   <!-- وصف الموقع لمحركات البحث -->
-  <meta name="description" content="سكن أفندي بيوفرلك شقق للإيجار والبيع، أراضي، محلات، مواد غذائية، مستلزمات طبية، موبايلات، أجهزة كهربائية وملابس.">
+  <meta name="description" content="افندي اسيوط  بيوفرلك شقق للإيجار والبيع، أراضي، محلات، مواد غذائية، مستلزمات طبية، موبايلات، أجهزة كهربائية وملابس.">
 
   <!-- كلمات مفتاحية -->
-  <meta name="keywords" content="شقق, شقق للإيجار, شقق للبيع, مواد غذائية, مستلزمات طبية, عربيات للبيع, أجهزة كهربائية, سكن أفندي, عقارات, محلات">
-  <meta name="author" content="سكن أفندي">
+  <meta name="keywords" content="شقق, شقق للإيجار, شقق للبيع, مواد غذائية, مستلزمات طبية, عربيات للبيع, أجهزة كهربائية,  افندي اسيوط, عقارات, محلات">
+  <meta name="author" content="افندي اسيوط ">
 
   <!-- Open Graph (الصورة والوصف للسوشيال ميديا + جوجل) -->
-  <meta property="og:title" content="سكن أفندي | شقق للإيجار والبيع">
-  <meta property="og:description" content="سكن أفندي بيوفرلك شقق للبيع والإيجار + أراضي + محلات + مواد غذائية + مستلزمات طبية + موبايلات + أجهزة كهربائية + ملابس.">
+  <meta property="og:title" content="افندي اسيوط  | شقق للإيجار والبيع">
+  <meta property="og:description" content="افندي اسيوط  بيوفرلك شقق للبيع والإيجار + أراضي + محلات + مواد غذائية + مستلزمات طبية + موبايلات + أجهزة كهربائية + ملابس.">
   <meta property="og:image" content="https://username.github.io/project/image/WhatsApp%20Image%202025-07-29%20at%205.16.14%20AM.jpeg">
   <meta property="og:url" content="https://sakan-afandy.github.io/">
   <meta property="og:type" content="website">
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="سكن أفندي | شقق للإيجار والبيع">
-  <meta name="twitter:description" content="سكن أفندي بيوفرلك كل احتياجاتك من شقق، محلات، مواد غذائية، مستلزمات طبية، موبايلات وأجهزة كهربائية.">
+  <meta name="twitter:title" content="افندي اسيوط  | شقق للإيجار والبيع">
+  <meta name="twitter:description" content="افندي اسيوط  بيوفرلك كل احتياجاتك من شقق، محلات، مواد غذائية، مستلزمات طبية، موبايلات وأجهزة كهربائية.">
   <meta name="twitter:image" content="https://username.github.io/project/image/WhatsApp%20Image%202025-07-29%20at%205.16.14%20AM.jpeg">
 
   <!-- Google Fonts -->
@@ -44,7 +44,7 @@
   <div class="container nav">
     <a href="index.html" class="brand">
   <div class="brand-badge">🏠</div>
-  <span>سكن أفندي</span>
+  <span> افندي اسيوط</span>
 </a>
     <div class="menu-toggle" onclick="toggleMenu()">☰</div>
     <nav class="menu" id="menu">
