--- a/index.html
+++ b/index.html
@@ -6,27 +6,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- العنوان (واحد بس) -->
-  <title>سكن أفندي | شقق للإيجار والبيع</title>
+  <title>افندي اسيوط  | شقق للإيجار والبيع</title>
 
   <!-- وصف الموقع لمحركات البحث -->
-  <meta name="description" content="سكن أفندي بيوفرلك شقق للإيجار والبيع، أراضي، محلات، مواد غذائية، مستلزمات طبية، موبايلات، أجهزة كهربائية وملابس.">
+  <meta name="description" content="افندي اسيوط  بيوفرلك شقق للإيجار والبيع، أراضي، محلات، مواد غذائية، مستلزمات طبية، موبايلات، أجهزة كهربائية وملابس.">
 
   <!-- كلمات مفتاحية -->
-  <meta name="keywords" content="شقق, شقق للإيجار, شقق للبيع, مواد غذائية, مستلزمات طبية, عربيات للبيع, أجهزة كهربائية, سكن أفندي, عقارات, محلات">
-  <meta name="author" content="سكن أفندي">
+  <meta name="keywords" content="شقق, شقق للإيجار, شقق للبيع, مواد غذائية, مستلزمات طبية, عربيات للبيع, أجهزة كهربائية,  افندي اسيوط, عقارات, محلات">
+  <meta name="author" content="افندي اسيوط ">
 
   <!-- Open Graph (الصورة والوصف للسوشيال ميديا + جوجل) -->
-  <meta property="og:title" content="سكن أفندي | شقق وبيوت للإيجار والبيع وخدمات الافندي">
-  <meta property="og:description" content="سكن أفندي بيوفرلك شقق للبيع والإيجار + أراضي + محلات + مواد غذائية + مستلزمات طبية + موبايلات + أجهزة كهربائية + ملابس.">
-  <meta property="og:image" content="image/WhatsApp%20Image%202025-07-29%20at%205.16.14%20AM.jpeg">
+  <meta property="og:title" content="افندي اسيوط  | شقق للإيجار والبيع">
+  <meta property="og:description" content="افندي اسيوط  بيوفرلك شقق للبيع والإيجار + أراضي + محلات + مواد غذائية + مستلزمات طبية + موبايلات + أجهزة كهربائية + ملابس.">
+  <meta property="og:image" content="https://username.github.io/project/image/WhatsApp%20Image%202025-07-29%20at%205.16.14%20AM.jpeg">
   <meta property="og:url" content="https://sakan-afandy.github.io/">
   <meta property="og:type" content="website">
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="سكن أفندي | شقق وبيوت للإيجار والبيع وخدمات الافندي">
-  <meta name="twitter:description" content="سكن أفندي بيوفرلك كل احتياجاتك من شقق، محلات، مواد غذائية، مستلزمات طبية، موبايلات وأجهزة كهربائية.">
-  <meta name="twitter:image" content="image/WhatsApp%20Image%202025-07-29%20at%205.16.14%20AM.jpeg">
+  <meta name="twitter:title" content="افندي اسيوط  | شقق للإيجار والبيع">
+  <meta name="twitter:description" content="افندي اسيوط  بيوفرلك كل احتياجاتك من شقق، محلات، مواد غذائية، مستلزمات طبية، موبايلات وأجهزة كهربائية.">
+  <meta name="twitter:image" content="https://username.github.io/project/image/WhatsApp%20Image%202025-07-29%20at%205.16.14%20AM.jpeg">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -47,7 +47,7 @@
   <div class="container nav">
     <a href="index.html" class="brand">
   <div class="brand-badge">🏠</div>
-  <span>سكن أفندي</span>
+  <span> افندي اسيوط</span>
 </a>
 
     <nav id="mainMenu" class="menu">
@@ -55,7 +55,7 @@
   <a href="#featured">العروض</a>
   <a href="#about">عن الشركة</a>
   <a href="#contact">تواصل</a>
-  <a href="https://wa.me/201097919027?text=مرحباً%20أريد%20ان اعلن%20عن%20شقق" target="_blank" style="color:green; font-weight:bold;">
+  <a href="https://wa.me/201097919027?text=مرحباً%20أريد%20ان اعلن%20عن%20منتجي  الخاص " target="_blank" style="color:green; font-weight:bold;">
     📢 للاعلان  
   </a>
 </nav>
@@ -230,10 +230,10 @@ function scrollToTop() {
       <h2>عن الشركة</h2>
       <p style="color:#9ca3af">نحن فريق عقاري متخصص، نقدّم حلولاً متكاملة من التسويق والبيع وحتى ما بعد البيع. نغطي الشقق والفلل والسكن الطلابي والعقارات التجارية، مع دعم فني واستشارات مجانية.</p>
       <div style="display:grid;grid-template-columns:repeat(4,1fr);gap:10px;margin-top:12px">
-        <div class="box" style="text-align:center"><b style="font-size:22px">174+</b><div style="color:#94a3b8">وحدة مُباعة</div></div>
-        <div class="box" style="text-align:center"><b style="font-size:22px">20</b><div style="color:#94a3b8">مشاريع نشطة</div></div>
+        <div class="box" style="text-align:center"><b style="font-size:22px">234+</b><div style="color:#94a3b8">وحدة مُباعة</div></div>
+        <div class="box" style="text-align:center"><b style="font-size:22px">69</b><div style="color:#94a3b8">مشاريع نشطة</div></div>
         <div class="box" style="text-align:center"><b style="font-size:22px">1</b><div style="color:#94a3b8">سنوات خبرة</div></div>
-        <div class="box" style="text-align:center"><b style="font-size:22px">280+</b><div style="color:#94a3b8">عملاء سعداء</div></div>
+        <div class="box" style="text-align:center"><b style="font-size:22px">340+</b><div style="color:#94a3b8">عملاء سعداء</div></div>
       </div>
     </div>
     <div class="box reveal">
@@ -262,7 +262,7 @@ function scrollToTop() {
 <footer>
   <div class="container foot">
     <div>
-      <div class="brand"><span class="brand-badge">🏠</span>  سكن افندي</div>
+      <div class="brand"><span class="brand-badge">🏠</span>  افندي اسيوط </div>
       <p style="color:#94a3b8">نسعى لرفع معايير تجربة شراء وبيع العقار بأدوات حديثة ف اسيوط</p>
     </div>
     <div>
@@ -281,7 +281,7 @@ function scrollToTop() {
       <p>أسيوط، مصر</p>
     </div>
   </div>
-  <div class="copy">© <span id="year"></span>  سكن افندي. جميع الحقوق محفوظة.</div>
+  <div class="copy">© <span id="year"></span>  افندي اسيوط . جميع الحقوق محفوظة.</div>
 </footer>
 
 <script>
