--- a/apartments.html
+++ b/apartments.html
@@ -44,7 +44,7 @@
   <div class="container nav">
     <a href="index.html" class="brand">
   <div class="brand-badge">🏠</div>
-  <span>سكن أفندي</span>
+  <span> أفندي اسيوط</span>
 </a>
     <div class="menu-toggle" onclick="toggleMenu()">☰</div>
     <nav class="menu" id="menu">
