Move site to docs folder

--- a/students.html
+++ b/students.html
@@ -204,27 +204,194 @@ function scrollToTop() {
 </div>
 </div>
 
-
-
 <!-- كارت 1 -->
-      <div class="card" data-title="شقة محمد حسن" data-meta="الموقع:  جوار مخبز رجب الوليديه "  data-price="950/شهري" data-gender="ذكر"data-phone="201128768348"><!-- رقم واتساب خاص بالكارت -->>
+      <div class="card" data-title=" شقة ف تامينات ف 3 سراير فاضين بنات شقة محمد حسن" data-meta="الموقع:  المكتبات "  data-price="900/شهري" data-gender="انثى" data-phone="201128768348"><!-- رقم واتساب خاص بالكارت -->>
   <div class="thumb slider">
     <button class="prev-btn">&#10094;</button>
-<img src="محمد/لقطة شاشة 2025-08-24 020640.png" class="slider-img active" alt="صورة 1">
-              <img src="محمد/لقطة شاشة 2025-08-24 020706.png" class="slider-img" alt="صورة 2">
-              <img src="محمد/لقطة شاشة 2025-08-24 020835.png" class="slider-img" alt="صورة 3">
-              <img src="محمد/لقطة شاشة 2025-08-24 020848.png" class="slider-img" alt="صورة 3">
+              <img src="محمد/لقطة شاشة 2025-09-02 210932.png" class="slider-img active" alt="صورة 1">
+              <img src="محمد/لقطة شاشة 2025-09-02 211117.png" class="slider-img" alt="صورة 2">
+              <img src="محمد/لقطة شاشة 2025-09-02 211200.png" class="slider-img" alt="صورة 3">
+              <img src="محمد/لقطة شاشة 2025-09-02 211200.png" class="slider-img" alt="صورة 4">
     <button class="next-btn">&#10095;</button>
 
     <div class="status">متاحة</div>
-    <div class="price-tag">950/جنيه</div>
+    <div class="price-tag">900/جنيه</div>
   </div>
   <div class="card-body">
-    <h5 class="card-title">ولاد خطوات من ميدان اسماء الله الحسنى بجوار مخبز رجب-  </h5>
-            <p class="card-text"> خطوات من ميدان اسماء الله الحسنى بجوار مخبز رجب.استهلاك 1300طول السنه</p>
-    <p class="meta">الموقع:  اسماء الله الحسنى</p>
+    <h5 class="card-title">شقة ف تامينات ف 3 سراير فاضين بنات -  </h5>
+            <p class="card-text"> مكان محترم عمارة نضيفه.</p>
+    <p class="meta">   الموقع: التامينات</p>
   <div class="card-actions">
      <button class="btn ghost" onclick="bookWhatsApp(this)">حجز</button>
+  </div>
+</div>
+</div>
+
+
+<!-- كارت 1 -->
+      <div class="card" data-title=" شقة ف تامينات ف 3 سراير فاضين بنات شقة محمد حسن" data-meta="الموقع:  المكتبات "  data-price="13000/شهري" data-gender="انثى" data-phone="201128768348"><!-- رقم واتساب خاص بالكارت -->>
+  <div class="thumb slider">
+    <button class="prev-btn">&#10094;</button>
+              <img src="محمد/IMG-20250902-WA0001.jpg" class="slider-img active" alt="صورة 1">
+              <img src="محمد/IMG-20250902-WA0002.jpg" class="slider-img" alt="صورة 2">
+              <img src="محمد/IMG-20250902-WA0002.jpg" class="slider-img" alt="صورة 3">
+              <img src="محمد/IMG-20250902-WA0004.jpg" class="slider-img" alt="صورة 4">
+              <img src="محمد/IMG-20250902-WA0005.jpg" class="slider-img" alt="صورة 5">
+              <img src="محمد/IMG-20250902-WA0006.jpg" class="slider-img" alt="صورة 6">
+    <button class="next-btn">&#10095;</button>
+
+    <div class="status">متاحة</div>
+    <div class="price-tag">13000/جنيه</div>
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">شقه تفرعات المكتبات تلات غرف فيها 6 سراير مكيفة بالكامل مطلوب 13 الف بالاستهلاك-  </h5>
+            <p class="card-text"> شقه تفرعات المكتبات تلات غرف فيها 6 سراير مكيفة بالكامل مطلوب 13 الف بالاستهلاك</p>
+    <p class="meta">   الموقع: تفرعات المكتبات</p>
+  <div class="card-actions">
+     <button class="btn ghost" onclick="bookWhatsApp(this)">حجز</button>
+  </div>
+</div>
+</div>
+
+
+
+<!-- كارت 1 -->
+      <div class="card" data-title=" سكن طالبات ف سيتي برج و 2 أسانسير مطلوب ف الثئاني 1500 و غرفه تانيه 1650 شقة محمد حسن" data-meta="الموقع:  سيتي "  data-price="900/شهري" data-gender="انثى" data-phone="201128768348"><!-- رقم واتساب خاص بالكارت -->>
+  <div class="thumb slider">
+    <button class="prev-btn">&#10094;</button>
+              <img src="محمد/لقطة شاشة 2025-09-02 211931.png" class="slider-img active" alt="صورة 1">
+              <img src="محمد/لقطة شاشة 2025-09-02 212000.png" class="slider-img" alt="صورة 2">
+              <img src="محمد/لقطة شاشة 2025-09-02 212032.png" class="slider-img" alt="صورة 3">
+              <img src="محمد/لقطة شاشة 2025-09-02 212101.png" class="slider-img" alt="صورة 4">
+    <button class="next-btn">&#10095;</button>
+
+    <div class="status">متاحة</div>
+    <div class="price-tag">1500/جنيه</div>
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">سكن طالبات ف سيتي برج و 2 أسانسير -  </h5>
+            <p class="card-text"> مطلوب ف الثئاني 1500 و غرفه تانيه 1650 
+والسنجل 2500 
+وغرفه ثلاثيه ماستر حمام 🛁 ب 1450
+</p>
+    <p class="meta">   الموقع: سيتي</p>
+  <div class="card-actions">
+     <button class="btn ghost" onclick="bookWhatsApp(this)">حجز</button>
+  </div>
+</div>
+</div>
+
+
+<!-- كارت 1 -->
+      <div class="card" data-title="شقة ف مساكن ويصا تفرعات سيتي
+ الدور الخامس ولاد
+ شقة محمد حسن" data-meta="الموقع:  سيتي "  data-price="900/شهري" data-gender="انثى" data-phone="201128768348"><!-- رقم واتساب خاص بالكارت -->>
+  <div class="thumb slider">
+    <button class="prev-btn">&#10094;</button>
+              <img src="محمد/لقطة شاشة 2025-09-02 214802.png" class="slider-img active" alt="صورة 1">
+              <img src="محمد/لقطة شاشة 2025-09-02 214832.png" class="slider-img" alt="صورة 2">
+              <img src="محمد/لقطة شاشة 2025-09-02 214907.png" class="slider-img" alt="صورة 3">
+    <button class="next-btn">&#10095;</button>
+
+    <div class="status">متاحة</div>
+    <div class="price-tag">1500/جنيه</div>
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">شقة ف مساكن ويصا تفرعات سيتي
+ الدور الخامس ولاد
+-  </h5>
+            <p class="card-text"> شقة ف مساكن ويصا تفرعات سيتي
+ الدور الخامس ولاد
+</p>
+    <p class="meta">   الموقع: سيتي</p>
+  <div class="card-actions">
+     <button class="btn ghost" onclick="bookWhatsApp(this)">حجز</button>
+  </div>
+</div>
+</div>
+
+
+<!-- كارت 1 -->
+      <div class="card" data-title="مصنع سيد تقسيم الشيخ عند جامع ال البيت السرير
+ شقة محمد حسن" data-meta="الموقع:  مصنع سيد "  data-price="900/شهري" data-gender="انثى" data-phone="201128768348"><!-- رقم واتساب خاص بالكارت -->>
+  <div class="thumb slider">
+    <button class="prev-btn">&#10094;</button>
+              <img src="محمد/لقطة شاشة 2025-09-02 215742.png" class="slider-img active" alt="صورة 1">
+              <img src="محمد/لقطة شاشة 2025-09-02 215720.png" class="slider-img" alt="صورة 2">
+              <img src="محمد/لقطة شاشة 2025-09-02 215623.png" class="slider-img" alt="صورة 3">
+              <img src="محمد/لقطة شاشة 2025-09-02 215605.png" class="slider-img" alt="صورة 4">
+    <button class="next-btn">&#10095;</button>
+
+    <div class="status">متاحة</div>
+    <div class="price-tag">1500/جنيه</div>
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">شقه دور ارضي اخر الشارع الي اوله سوبر. ماركت ال البيت اوضتين ثلاثي مكيف. 
+موجود شاشة وميكرويف </h5>
+            <p class="card-text">شقه دور ارضي اخر الشارع الي اوله سوبر. ماركت ال البيت اوضتين ثلاثي مكيف. 
+موجود شاشة وميكرويف
+</p>
+    <p class="meta">   الموقع: مصنع سيد</p>
+  <div class="card-actions">
+     <button class="btn ghost" onclick="bookWhatsApp(this)">حجز</button>
+  </div>
+</div>
+</div>
+
+
+<!-- كارت 1 -->
+      <div class="card" data-title="آخر تامينات السيارات 
+متاح غرفه ثلاثيه
+ شقة محمد حسن" data-meta="الموقع:  مصنع سيد "  data-price="1000/شهري" data-gender="انثى" data-phone="201128768348"><!-- رقم واتساب خاص بالكارت -->>
+  <div class="thumb slider">
+    <button class="prev-btn">&#10094;</button>
+              <img src="محمد/لقطة شاشة 2025-09-02 221223.png" class="slider-img active" alt="صورة 1">
+              <img src="محمد/لقطة شاشة 2025-09-02 221156.png" class="slider-img" alt="صورة 2">
+              <img src="محمد/لقطة شاشة 2025-09-02 221059.png" class="slider-img" alt="صورة 3">
+    <button class="next-btn">&#10095;</button>
+
+    <div class="status">متاحة</div>
+    <div class="price-tag">1000/جنيه</div>
+  </div>
+  <div class="card-body">
+    <h5 class="card-title"> آخر تامينات السيارات 
+متاح غرفه ثلاثيه</h5>
+            <p class="card-text">آخر تامينات السيارات 
+متاح غرفه ثلاثيه
+</p>
+    <p class="meta">   الموقع: مصنع سيد</p>
+  <div class="card-actions">
+     <button class="btn ghost" onclick="bookWhatsApp(this)">حجز</button>
+  </div>
+</div>
+</div>
+
+<!-- كارت 1 -->
+      <div class="card" data-title=" شقة ف تامينات اول بلكونة فيها 9 سراير 
+ شقة محمد حسن" data-meta="الموقع:  مصنع سيد "  data-price="1200/شهري" data-gender="انثى" data-phone="201128768348"><!-- رقم واتساب خاص بالكارت -->>
+  <div class="thumb slider">
+    <button class="prev-btn">&#10094;</button>
+              <img src="محمد/لقطة شاشة 2025-09-02 222312.png" class="slider-img active" alt="صورة 1">
+              <img src="محمد/لقطة شاشة 2025-09-02 222226.png" class="slider-img" alt="صورة 2">
+              <img src="محمد/لقطة شاشة 2025-09-02 222107.png" class="slider-img" alt="صورة 3">
+              <img src="محمد/لقطة شاشة 2025-09-02 222001.png" class="slider-img" alt="صورة 3">
+    <button class="next-btn">&#10095;</button>
+
+    <div class="status">متاحة</div>
+    <div class="price-tag">1200/جنيه</div>
+  </div>
+  <div class="card-body">
+    <h5 class="card-title"> شقة ف تامينات اول بلكونة فيها 9 سراير </h5>
+            <p class="card-text">شقة ف تامينات اول بلكونة فيها 9 سراير 
+</p>
+    <p class="meta">   الموقع:  التامينات</p>
+  <div class="card-actions">
+     <button class="btn ghost" onclick="bookWhatsApp(this)">حجز</button>
+  </div>
+</div>
+</div>
+
+
   </div>
 </div>
 </div>
